<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/fragmentTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_fragment"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_data"
            android:textColor="@color/black"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="10dp"
            />

        <TextView
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@color/black"
            android:text="@string/default_value"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

    <EditText
        android:id="@+id/firstFragmentData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="text"
        />

    <Button
        android:id="@+id/sendDataToActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_back_to_act"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_data"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            />

        <TextView
            android:id="@+id/dataFromSecondFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/default_value"
            android:layout_marginRight="10dp"
            />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="text"
        />

    <Button
        android:id="@+id/goToNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_to_frag"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        />

</LinearLayout>